# toxology

./: .gitignore  CLAUDE.md  LICENSE  README.md  REAL_WORLD_TEST_RESULTS.md  VENDORING.md  pyproject.toml  run_fedpkg_inspect.py  tox.patch  vendor.py
.github/workflows/: release.yml  test.yml
src/toxology/: __init__.py  config.py
src/toxology/_stubs/: __init__.py  distlib.py  filelock.py  python_discovery.py  tomli_w.py
src/toxology/_stubs/virtualenv/: __init__.py
src/toxology/_stubs/virtualenv/discovery/: py_spec.py
src/toxology/_vendored/: __init__.py  _stubs.py  cachetools.py  distlib.py  filelock.py  platformdirs.py  pyproject_api.py  python_discovery.py  sbom.json  tomli_w.py  vendor.txt
src/toxology/_vendored/colorama/: __init__.py
src/toxology/_vendored/tox/: version.py
src/toxology/_vendored/tox/config/: sets.py
src/toxology/_vendored/tox/plugin/: manager.py
src/toxology/_vendored/virtualenv/: __init__.py
src/toxology/_vendored/virtualenv/discovery/: __init__.py  py_spec.py
tests/: conftest.py  test_config.py  test_import_isolation.py  test_vendoring.py
tests/fixtures/tox_project_ini/: tox.ini
tests/fixtures/tox_project_ini_env_placeholders/: tox.ini
tests/fixtures/tox_project_ini_no_extras/: tox.ini
tests/fixtures/tox_project_minimal_toml/: pyproject.toml
tests/fixtures/tox_project_minversion_666/: pyproject.toml
tests/fixtures/tox_project_setup_cfg/: setup.cfg
tests/fixtures/tox_project_toml/: pyproject.toml
tests/fixtures/tox_project_with_changedir/: pyproject.toml
tests/fixtures/tox_project_with_setenv/: pyproject.toml
