[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toxology"
version = "0.1.0"
description = "A Python package"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Miro Hrončok", email = "miro@hroncok.cz" }
]
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]

dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/toxology"]
