[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toxology"
version = "0.1.0"
description = "Read tox configuration (deps, extras, commands) using the tox Python API"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Miro Hrončok", email = "miro@hroncok.cz" }
]
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]

dependencies = [
    "tox>=4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/toxology"]

[tool.tox]
env_list = ["py312"]
