[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[project]
name = "toxology"
version = "0.1.0"
description = "Read tox configuration (deps, extras, commands) using the tox Python API"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE", "src/toxology/_vendored/tox/"]
authors = [
    { name = "Miro Hrončok", email = "miro@hroncok.cz" }
]
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]

dependencies = [
    "packaging>=26",  # From ELN - for parsing deps/requirements/markers/pylock
    "pluggy",  # From ELN - for tox plugin system
]

[project.urls]
Homepage = "https://github.com/hroncok/toxology"
Source = "https://github.com/hroncok/toxology"
Issues = "https://github.com/hroncok/toxology/issues"

[dependency-groups]
test = [
    "pytest",
]
typing = [
    "ty",
]
lint = [
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/toxology"]
sbom-files = ["src/toxology/_vendored/sbom.json"]

[tool.tox]
env_list = ["py312", "py313", "py314", "py315", "typing", "lint"]

[tool.tox.env_run_base]
dependency_groups = ["test"]
commands = [["pytest", { replace = "posargs", default = [], extend = true }]]

[tool.tox.env.typing]
dependency_groups = ["typing", "test"]
commands = [["ty", "check", "--exclude", "src/toxology/_vendored/**", "--exclude", "run_fedpkg_inspect.py", "."]]

[tool.tox.env.lint]
dependency_groups = ["lint"]
commands = [["ruff", "check", "."]]

[tool.ruff]
exclude = [
    "src/toxology/_vendored/",
]
